--- a/css/style.css
+++ b/css/style.css
@@ -1389,7 +1389,7 @@ main #story .swiper .swiper-slide {
   position: relative;
   text-align: center;
   font-size: 18px;
-  width: 460px;
+  width: 460px !important;
   height: 530px;
   background: #fff;
   /* Center slide text vertically */
@@ -1422,14 +1422,20 @@ main #story .swiper .swiper-slide .img-words h2 {
 }
 main #story .swiper .swiper-slide .img-words p {
   margin: 0px 30px 45px 30px;
-  font-size: 26px;
+  font-size: 24px;
   color: white;
 }
 main #story .swiper .swiper-slide .img-words a {
   font-size: 24px;
   color: #e19040;
 }
-main #story .slide-3:hover {
+@media screen and (max-width: 577px) {
+  main .swiper-slide {
+    width: 500px;
+    height: 100%;
+  }
+}
+main .slide-3:hover {
   width: 100%;
   height: 100%;
   background-image: url(./i);
