--- a/style.scss
+++ b/style.scss
@@ -1619,30 +1619,29 @@ main {
     @include section-setting;
     height: 100vh;
     background-color: #fff;
-   
 
     h1 {
       @include main-heading;
     }
 
     .swiper {
-      
       width: 100%;
       height: 100%;
+     
       .swiper-slide {
         position: relative;
         text-align: center;
         font-size: 18px;
-        width: 460px;
+        width: 460px !important;
         height: 530px;
         background: #fff;
         
-        &:hover{
-          img{
+
+        &:hover {
+          img {
             z-index: 0;
           }
         }
-       
 
         /* Center slide text vertically */
         display: flex;
@@ -1655,42 +1654,47 @@ main {
           height: 100%;
           object-fit: cover;
           z-index: 2;
-          
         }
-        .img-words{
+        .img-words {
           position: absolute;
           width: 100%;
           height: 100%;
           background-color: rgba(58, 56, 57, 0.7);
           z-index: 1;
-          h2{
+          h2 {
             margin: 25px 0px;
             font-size: 40px;
             color: #e19040;
           }
-          p{
+          p {
             margin: 0px 30px 45px 30px;
-            font-size: 26px;
+            font-size: 24px;
             color: rgb(255, 255, 255);
           }
-          a{
+          a {
             font-size: 24px;
             color: #e19040;
           }
-
-        }
-      }
-    }
-
-      .slide-3 {
-        &:hover {
-          width: 100%;
-          height: 100%;
-          background-image: url(./i);
         }
       }
     }
   }
+  @media screen and (max-width:577px) {
+    .swiper-slide{
+      width: 500px ;
+      height: 100%;
+    }
+  }
+  
+
+  .slide-3 {
+    &:hover {
+      width: 100%;
+      height: 100%;
+      background-image: url(./i);
+    }
+  }
+}
 
 
 footer {
