--- a/style.scss
+++ b/style.scss
@@ -2040,7 +2040,7 @@ main {
 
 footer {
   @include section-setting;
-  padding: 110px 320px;
+  padding: 110px 300px;
   align-items: flex-start;
   background-color: black;
   color: white;
@@ -2079,5 +2079,38 @@ footer {
   .line {
     width: 100%;
     padding: 45px 0;
+  }
+
+  .related-groups {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    h1 {
+      align-self: center;
+      margin: 0;
+    }
+
+    .related-groups-icons {
+      display        : flex;
+      justify-content: space-between;
+      list-style     : none;
+      width          : 620px;
+      height         : 50px;
+  
+      .icon {
+        img {
+          width : 100px;
+          height: 100px;
+        }
+      }
+    }
+
+    .copyright {
+      font-size: 18px;
+      font-weight: bold;
+      color: #e19040;
+      align-self: end;
+    }
   }
 }
